# Deadcode

./: .gitignore  Cargo.toml
example/: hello.dc
src/: ast.rs  bytecode.rs  deadcode_cargo.rs  deadcode_parser_full.rs  deadcode_semantic_bytecode.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  semantic.rs  vm.rs
