[package]
name = "deadcode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deadcode"
path = "src/main.rs"

[lib]
name = "deadcode_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
